# avro-viewer-web

./: .gitignore  README.md  avro_viewer_web.opam  build.sh  dune  dune-project  dune-workspace  run_server.sh
.github/: dependabot.yml
.github/workflows/: build.yml
server/: dune  server.ml
src/: app_state.ml  dom_utils.ml  dune  file_upload.ml  filter_panel.ml  main.ml  record_table.ml  schema_viewer.ml
static/: index.html  style.css
test/: dune  generate_test_data.ml
